added sass to dependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nexusui": "^2.0.16",
     "passport": "^0.4.1",
     "pg-promise": "^10.5.5",
+    "sass": "^1.26.5",
     "socket.io": "^2.3.0",
     "tone": "^13.8.25",
     "uppy": "^1.14.1",
