--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "nexusui": "^2.0.16",
     "passport": "^0.4.1",
     "pg-promise": "^10.5.5",
-    "sass": "^1.26.5",
     "socket.io": "^2.3.0",
     "tone": "^13.8.25",
     "uppy": "^1.14.1",
@@ -40,6 +39,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^26.0.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
