--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "graphql-request": "^1.8.2",
+    "jsonwebtoken": "^8.5.1",
     "midi-note": "^1.0.0",
     "nexusui": "^2.0.16",
     "passport": "^0.4.1",
