--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node server/index.js",
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve src/serve-dev.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@jurajkavka/vue-hamburger-button": "^1.0.5",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
     "core-js": "^3.6.4",
@@ -28,6 +32,8 @@
     "tone": "^13.8.25",
     "uppy": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-bootstrap-sidebar": "^1.0.6",
+    "vue-fontawesome": "0.0.2",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^3.0.9",
     "vuex": "^3.1.3"
