--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bcrypt": "^4.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@jurajkavka/vue-hamburger-button": "^1.0.5",
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
     "core-js": "^3.6.4",
