(feat) Verify all JWT tokens

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@jurajkavka/vue-hamburger-button": "^1.0.5",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
     "core-js": "^3.6.4",
