--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-request": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "midi-note": "^1.0.0",
