--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server/index.js",
-    "serve": "vue-cli-service serve src/serve-dev.js",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -33,6 +33,7 @@
     "passport": "^0.4.1",
     "pg-promise": "^10.5.5",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "tone": "^13.8.25",
     "uppy": "^1.14.1",
     "vue": "^2.6.11",
@@ -40,7 +41,7 @@
     "vue-fontawesome": "0.0.2",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
-    "vue-socket.io": "^3.0.9",
+    "vue-socket.io": "^2.1.1-b",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
