--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^2.1.1-b",
+    "vuejs-progress-bar": "^1.2.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
