--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nexusui": "^2.0.16",
     "passport": "^0.4.1",
     "pg-promise": "^10.5.5",
+    "randomstring": "^1.1.5",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "tone": "^13.8.25",
