--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
+    "cloudinary": "^1.21.0",
     "cloudinary-vue": "^1.0.1",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "fetch": "^1.1.0",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-request": "^1.8.2",
@@ -31,6 +33,7 @@
     "midi-note": "^1.0.0",
     "moment": "^2.25.3",
     "nexusui": "^2.0.16",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "pg-promise": "^10.5.5",
     "randomstring": "^1.1.5",
