--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue": "^2.13.1",
     "cloudinary": "^1.21.0",
     "cloudinary-vue": "^1.0.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
