--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "vue-fontawesome": "0.0.2",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
+    "vue-select": "^3.10.3",
     "vue-socket.io": "^2.1.1-b",
+    "vue-underscore": "^0.1.4",
     "vuejs-progress-bar": "^1.2.2",
     "vuex": "^3.1.3"
   },
