--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-bootstrap-sidebar": "^1.0.6",
     "vue-fontawesome": "0.0.2",
     "vue-moment": "^4.1.0",
+    "vue-progress-path": "0.0.2",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^2.1.1-b",
     "vuejs-progress-bar": "^1.2.2",
